--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header >
         <div class="container-fluid">
           <div id="contenedor" class="row">
-            <img  src="../img/jm.png" alt="logoJM" width="100" height="auto" class="col-2 col-md-1 col-lg-1 col-xl-1 m-0 p-0 img-fluid"> <!--col-md-5 col-lg-5 col-xl-5--->
+            <img  src="./img/jm.png" alt="logoJM" width="100" height="auto" class="col-2 col-md-1 col-lg-1 col-xl-1 m-0 p-0 img-fluid">
             <h1 id="titulojm" class="col-10 col-md-11 col-lg-11 col-xl-11 text-center">JM Traducciones</h1>
           </div>
         </div>
